tree-sitter-exa/test/corpus/muli.txt
====
muli
====

MULI T f x
Muli M x #dial
muli F #page m
MuLI T #NERV #Data
mULi m -625 f
MuLI x -156 #PAGE
muli #nerv T X
muLI #Dial f #Data
MULI #Nerv #Dial T
MULI #data #page #Nerv
mUli #DIAL -649 M
Muli #data -51 #page
MUlI 36 x f
mULi -72 M #DIAL
muLi +304 #NERV T
mULI -0081 #Data #Page
MULI -0591 -1452 M
mULi -82 +772 #Dial

---

(exa
    (muli
        (register
            (t))
        (register
            (f))
        (register
            (x)))
    (muli
        (register
            (m))
        (register
            (x))
        (register
            (hardware)))
    (muli
        (register
            (f))
        (register
            (hardware))
        (register
            (m)))
    (muli
        (register
            (t))
        (register
            (hardware))
        (register
            (hardware)))
    (muli
        (register
            (m))
        (number)
        (register
            (f)))
    (muli
        (register
            (x))
        (number)
        (register
            (hardware)))
    (muli
        (register
            (hardware))
        (register
            (t))
        (register
            (x)))
    (muli
        (register
            (hardware))
        (register
            (f))
        (register
            (hardware)))
    (muli
        (register
            (hardware))
        (register
            (hardware))
        (register
            (t)))
    (muli
        (register
            (hardware))
        (register
            (hardware))
        (register
            (hardware)))
    (muli
        (register
            (hardware))
        (number)
        (register
            (m)))
    (muli
        (register
            (hardware))
        (number)
        (register
            (hardware)))
    (muli
        (number)
        (register
            (x))
        (register
            (f)))
    (muli
        (number)
        (register
            (m))
        (register
            (hardware)))
    (muli
        (number)
        (register
            (hardware))
        (register
            (t)))
    (muli
        (number)
        (register
            (hardware))
        (register
            (hardware)))
    (muli
        (number)
        (number)
        (register
            (m)))
    (muli
        (number)
        (number)
        (register
            (hardware))))
