tree-sitter-exa/test/corpus/swiz.txt
====
swiz
====

SWIZ X m F
Swiz t x #Page
swiz T #dial M
SWiZ f #DATA #nerv
sWIZ T 1483 m
SWiz F -295 #nerv
SwiZ #dial X t
SWIz #Page m #data
SWIz #page #dial f
sWIz #DATA #nerv #data
SwIz #Dial +644 x
Swiz #Page 1331 #Nerv
swiz +602 t X
swiz -150 f #page
swiz 153 #Dial m
SwiZ 266 #DATA #NERV
SWIZ -0998 565 X
SwIz -436 653 #dial

---

(exa
    (swiz
        (register
            (x))
        (register
            (m))
        (register
            (f)))
    (swiz
        (register
            (t))
        (register
            (x))
        (register
            (hardware)))
    (swiz
        (register
            (t))
        (register
            (hardware))
        (register
            (m)))
    (swiz
        (register
            (f))
        (register
            (hardware))
        (register
            (hardware)))
    (swiz
        (register
            (t))
        (number)
        (register
            (m)))
    (swiz
        (register
            (f))
        (number)
        (register
            (hardware)))
    (swiz
        (register
            (hardware))
        (register
            (x))
        (register
            (t)))
    (swiz
        (register
            (hardware))
        (register
            (m))
        (register
            (hardware)))
    (swiz
        (register
            (hardware))
        (register
            (hardware))
        (register
            (f)))
    (swiz
        (register
            (hardware))
        (register
            (hardware))
        (register
            (hardware)))
    (swiz
        (register
            (hardware))
        (number)
        (register
            (x)))
    (swiz
        (register
            (hardware))
        (number)
        (register
            (hardware)))
    (swiz
        (number)
        (register
            (t))
        (register
            (x)))
    (swiz
        (number)
        (register
            (f))
        (register
            (hardware)))
    (swiz
        (number)
        (register
            (hardware))
        (register
            (m)))
    (swiz
        (number)
        (register
            (hardware))
        (register
            (hardware)))
    (swiz
        (number)
        (number)
        (register
            (x)))
    (swiz
        (number)
        (number)
        (register
            (hardware))))
