tree-sitter-exa/test/corpus/void.txt
====
void
====

VOID f
Void m
void f
VOId m
VoId F
vOiD m

---

(exa
    (void
        (f))
    (void
        (m))
    (void
        (f))
    (void
        (m))
    (void
        (f))
    (void
        (m)))
